--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="idle_ended_notification_text">Idle time ended</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
+    <string name="button_confirm">Ok</string>
+    <string name="button_cancel">Cancel</string>
+
+    <string name="dialog_time_title">Select time</string>
+
     <!-- Preference Titles -->
     <string name="notifications_header">Notifications</string>
 
